; ModuleID = '/home/carl/AnghaBench/tmux/extr_layout.c_layout_make_node.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_layout.c_layout_make_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.layout_cell = type { i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32* }

@LAYOUT_WINDOWPANE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"bad layout type\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @layout_make_node(%struct.layout_cell* %0, i32 %1) #0 {
  %3 = alloca %struct.layout_cell*, align 8
  %4 = alloca i32, align 4
  store %struct.layout_cell* %0, %struct.layout_cell** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @LAYOUT_WINDOWPANE, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = call i32 @fatalx(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %2
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.layout_cell*, %struct.layout_cell** %3, align 8
  %13 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 8
  %14 = load %struct.layout_cell*, %struct.layout_cell** %3, align 8
  %15 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %14, i32 0, i32 2
  %16 = call i32 @TAILQ_INIT(i32* %15)
  %17 = load %struct.layout_cell*, %struct.layout_cell** %3, align 8
  %18 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %17, i32 0, i32 1
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = icmp ne %struct.TYPE_2__* %19, null
  br i1 %20, label %21, label %26

21:                                               ; preds = %10
  %22 = load %struct.layout_cell*, %struct.layout_cell** %3, align 8
  %23 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %22, i32 0, i32 1
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  br label %26

26:                                               ; preds = %21, %10
  %27 = load %struct.layout_cell*, %struct.layout_cell** %3, align 8
  %28 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %27, i32 0, i32 1
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %28, align 8
  ret void
}

declare dso_local i32 @fatalx(i8*) #1

declare dso_local i32 @TAILQ_INIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
